--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                     <table align="center" width="100%">
                         <tr>
                             <td>
-                                <a href="#"><img src="/img/logo.png" alt="logo" title="flow Lab Logo" width="88"></a>
+                                <a href="/"><img src="/img/logo.png" alt="logo" title="flow Lab Logo" width="88"></a>
                             </td>
                         </tr>
                     </table>
@@ -90,13 +90,13 @@
         <table class="banner">
             <tr>
                 <td>
-                    <a href="#"><img src="/img/banner.jpg" alt="banner" title="Banner"></a>
+                    <a href="https://www.youtube.com/watch?v=K1XV79y_pok"><img src="/img/banner.jpg" alt="banner" title="Banner"></a>
                 </td>
             </tr>
 
             <tr>
                 <td align="center" style="padding-top: 50px ;">
-                    <a href="#" class="btn">Watch now</a>
+                    <a href="https://www.youtube.com/watch?v=K1XV79y_pok" class="btn">Watch now</a>
                 </td>
             </tr>
 
@@ -242,5 +242,6 @@
 
     </div>
     
+    <!-- FOOTER SECTION END -->
 </body>
 </html>
